RESOLVED FIXED132284
[New Multicolumn] event.offsetX/offsetY don't work correctly
https://bugs.webkit.org/show_bug.cgi?id=132284
Summary [New Multicolumn] event.offsetX/offsetY don't work correctly
Dave Hyatt
Reported 2014-04-28 09:36:47 PDT
Three form control tests fail because something is still wrong with offsetLeft/Top: fast/forms/number/number-spinbutton-in-multi-column.html [ Failure ] fast/forms/range/slider-in-multi-column.html [ Failure ] fast/forms/select/listbox-in-multi-column.html [ Failure ] It's all the same bug, so fixing it should make all three test cases pass.
Attachments
Patch (7.39 KB, patch)
2014-04-28 15:21 PDT, Dave Hyatt
simon.fraser: review+
Dave Hyatt
Comment 1 2014-04-28 13:11:20 PDT
This is the cause of fast/events/offsetX-offsetY.html failing as well. This boils down to mapAbsoluteToLocal not doing the right thing for new columns.
Dave Hyatt
Comment 2 2014-04-28 15:21:21 PDT
WebKit Commit Bot
Comment 3 2014-04-28 15:23:02 PDT
Attachment 230326 [details] did not pass style-queue: ERROR: Source/WebCore/rendering/RenderMultiColumnFlowThread.h:111: The parameter name "transformState" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 4 2014-04-28 15:23:58 PDT
Comment on attachment 230326 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=230326&action=review > Source/WebCore/rendering/RenderBoxModelObject.cpp:2646 > + if (isBox() && o->isOutOfFlowRenderFlowThread()) { Would be nice to rename "o" at some point.
Dave Hyatt
Comment 5 2014-04-28 15:36:00 PDT
Fix landed in r167910.
Note You need to log in before you can comment on or make changes to this bug.