Source/WebCore/rendering/RenderBoxModelObject.cpp
@@ -2637,10 +2637,13 @@ void RenderBoxModelObject::mapAbsoluteToLocalPoint(MapCoordinatesFlags mode, Tra
     auto o = container();
     if (!o)
         return;
-
+    
+    // FIXME: This code is wrong for named flow threads since it only works for content in the first region.
+    // We also don't want to run it for multicolumn flow threads, since we can use our knowledge of column
+    // geometry to actually get a better result.
     // The point inside a box that's inside a region has its coordinates relative to the region,
     // not the FlowThread that is its container in the RenderObject tree.
-    if (o->isRenderFlowThread() && isBox()) {
+    if (isBox() && o->isOutOfFlowRenderFlowThread()) {
         RenderRegion* startRegion = nullptr;
         RenderRegion* endRegion = nullptr;
         if (toRenderFlowThread(o)->getRegionRangeForBox(toRenderBox(this), startRegion, endRegion))
